--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-	background: fixed;
-    background-image: linear-gradient(180deg, rgb(154, 230, 255), rgb(148, 253, 166));
+	
+    background-image: linear-gradient(180deg, rgb(154, 206, 255), rgb(148, 253, 246), rgb(148, 253, 165), rgb(244, 253, 148), rgb(253, 148, 206));
 }
 
 .navbar {
     position: fixed;
-    background-color: rgb(70, 48, 33);
+    background-color: rgb(28, 22, 22);
     width: 100%;
     top: 0;
     left: 0;
@@ -23,7 +23,7 @@ body {
   }
   .navbar h1 {
       font-weight: bold;
-      background: rgb(70, 48, 33);
+      background: rgb(28, 22, 22);
       font-size: 30px;
       padding: .75em 0 0 1em;
       float: left;
@@ -33,13 +33,13 @@ body {
     text-align: right;
     vertical-align: bottom;
     padding:2em 1em 0em;
-    background: rgb(70, 48, 33);
+    background:  rgb(28, 22, 22);
     float: right;
     font-size: 18px;
   }
 
 #firstbar {
-    margin: 6rem 4% 0 4%;
+    margin: 6rem 9% 0 9%;
 } 
 
 .headers {
@@ -47,23 +47,25 @@ body {
     font-size: 19px;
     color: #ffffff;
     text-align: center;
-    background:#7e583e;
+    background:#392929;
     padding: 2px 7px 2px 7px;
-    border-radius: 50rem;
-    margin: 0% 4% 0 4%;
+    border-radius: .5rem;
+    margin: 0% 9% 0 9%;
 }
 
 .text {
     font-family: "Palatino", serif;
-    font-size: 21px;
+    font-size: 1.65vw;
     color: black;
-    margin: 1% 4% 4% 4%;
+    margin: 1% 9% 4% 9%;
     background-color: rgba(255, 255, 255, 0.5);
-    padding: 1px 1% 1% 1%;
+    padding: 1% 2% 1% 2%;
+    line-height: 2.25rem;
 }
 
 #intro {
-    text-align: left;
+    text-align: center;
+    font-size: 2vw;
 } 
 
 #single {
@@ -76,35 +78,45 @@ img{
     align-items: center;
 }
 
-#persona1{
+#website{
     display: flex;
     align-items: center;
 }
 
-#persona1 img{
+#website img{
     margin: 1% 0 0 .5%;
+    height: 40%;
+    width:  40%;
 }
 
-#persona1 p{
+#website p{
     padding: 0 5% 0 5%;
-    font-size: 28px;
+    font-size: 2vw;
     text-align: center;
 }
 
-#persona2{
+.lowfi{
     display: flex;
     align-items: center;
 }
 
-#persona2 img{
+.lowfi img{
     margin: 1% 0 0 .5%;
+    height: 50%;
+    width:  50%;
 }
 
-#persona2 p{
+.lowfi p{
     padding: 0 5% 0 5%;
-    font-size: 28px;
+    font-size: 1.5vw;
     text-align: center;
 }
+
+.center{
+    text-align: center;
+}
+
+
 
 #sb {
     background-color: rgba(255, 255, 255, 0.5);
@@ -132,4 +144,8 @@ img{
     background-color: rgba(255, 255, 255, 0.5);
     padding: 1px 1% 1% 1%;
     
+  }
+
+  .two_levels {
+    display: float;
   }
